--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.6",
     "apollo-server-micro": "^3.13.0",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "micro-cors": "^0.1.1",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
     "@types/micro-cors": "^0.1.2",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.3",
     "typescript": "^5"
   }
 }
